# oc-vault

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_fm.sh  init_softhsm.sh  test_lunahsm.sh
.devcontainer/: devcontainer.json
oc-vault/: Cargo.toml
oc-vault-server/: Cargo.toml
shared/src/: lib.rs  p11.rs  test_hsm.rs
vault/: Cargo.toml
vault-api/: Cargo.toml
vault-api/src/: core_mock.rs  main.rs
vault-core/: Cargo.toml  build.rs
vault-core/c/: .gitignore  hdr.c  makefile
vault-core/fm/: hdr.c  vault.c  vault.h
vault-core/src/: lib.rs  lunahsm_handlers.rs
vault-core/src/api/: add_vault.rs  get_random.rs  mod.rs  remove_vault.rs
vault-core/src/api/utils/: mod.rs  test.rs
vault-proxy/: Cargo.toml  build.rs
vault-proxy/src/: main.rs
vault-proxy/src/hsm/: md.rs  mod.rs
vault-proxy/src/tests/: get_random_test.rs  mod.rs
vault-server/: Cargo.toml
