[workspace]
resolver = "2"
members = [
    "vault-core",
    "vault-proxy"
]

[workspace.dependencies]
vault-core = { path = "./vault-core" }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = "0.4.3"