[workspace]
resolver = "2"
members = [ "shared",
    "vault-core",
    "vault-proxy",
    "shared"
]

[workspace.dependencies]
vault-core = { path = "./vault-core" }
shared = { path = "./shared" }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }