[package]
name = "vault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[lib]
name = "vault_core"
crate-type = ["rlib"]

[features]
softhsm = []
lunahsm = []
lunahsm_fm = []