[package]
name = "vault-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
vault-core = { workspace = true, optional = true}
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[features]
softhsm = ["vault-core/softhsm"]
lunahsm = []